--- a/style.css
+++ b/style.css
@@ -10,3 +10,23 @@
     background: linear-gradient(135deg, #153677, #4e085f);
     padding: 10px;
 }
+
+.todo{
+    width: 100%;
+    max-width: 540px;
+    background: antiquewhite;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
+
+.todo-1{
+    color: #002765;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.todo-1 h2 img{
+    width: 30px;
+    margin-left: 10px;
+}
